--- a/index.html
+++ b/index.html
@@ -1,4 +1,21 @@
+<!DOCTYPE html>
+<html>
+<head>
+<link rel="stylesheet" href="style.css">
+  <link href='https://fonts.googleapis.com/css?family=Russo One' rel='stylesheet'>
+<style>
+body {
+    font-family: 'Russo One';font-size: 22px;
+}
+</style>
+</head>
+<body>
 
-
+  
 <h1> COMPUTER SCIENCE SOCIETY </h1>
 <h3> Coming Soon </h3>
+
+
+</body>
+</html> 
+
