--- a/index.html
+++ b/index.html
@@ -11,9 +11,8 @@ body {
 </head>
 <body>
 
-  
-<h1> COMPUTER SCIENCE SOCIETY </h1>
-  <br>
+<heading> <h1> COMPUTER SCIENCE SOCIETY </h1> </heading>
+<br>
 <h3> Coming Soon </h3>
 
 
