--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <link href='https://fonts.googleapis.com/css?family=Russo One' rel='stylesheet'>
 <style>
 body {
-    font-family: 'Russo One';font-size: 22px;
+    font-family: 'Russo One';
 }
 </style>
 </head>
