--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@ body {
 </head>
 <body>
 
-<heading> <h1> COMPUTER SCIENCE SOCIETY </h1> </heading>
+<h1> COMPUTER SCIENCE SOCIETY </h1>
 <br>
 <h3> Coming Soon </h3>
 
