--- a/index.html
+++ b/index.html
@@ -3,11 +3,24 @@
 <head>
 <link rel="stylesheet" href="style.css">
   <link href='https://fonts.googleapis.com/css?family=Russo One' rel='stylesheet'>
-<style>
-body {
-    font-family: 'Russo One';
-}
-</style>
+  <style>
+    body {
+      font-family: 'Russo One', sans-serif; /* Make sure to include a fallback font */
+      background: linear-gradient(to bottom right, #00127F, #C900F0);
+      margin: 0;
+      padding: 0;
+      min-height: 100vh;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      text-align: center;
+    }
+
+    h1, h3 {
+      color: white;
+      display: block;
+    }
+  </style>
 </head>
 <body>
 
@@ -18,4 +31,6 @@ body {
 
 </body>
 </html> 
+
+
 
