--- a/index.html
+++ b/index.html
@@ -5,27 +5,14 @@
   <link href='https://fonts.googleapis.com/css?family=Russo One' rel='stylesheet'>
   <style>
     body {
-      font-family: 'Russo One', sans-serif; /* Make sure to include a fallback font */
-      background: linear-gradient(to bottom right, #00127F, #C900F0);
-      margin: 0;
-      padding: 0;
-      min-height: 100vh;
-      justify-content: center;
-      align-items: center;
-      text-align: center;
-    }
-
-    h1, h3 {
-      color: white;
-      display: block;
-    }
+      font-family: 'Russo One', sans-serif; 
   </style>
 </head>
 <body>
-
+<div class="heading-container">
 <h1> COMPUTER SCIENCE SOCIETY </h1>
-<br>
 <h3> Coming Soon </h3>
+</div>
 
 
 </body>
