--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 </head>
 <body>
 <div class="heading-container">
+<link href ='https://github.com/fairfield-css/fairfieldcss.github.io/blob/main/fairfield-css-logo-nobg.png'>
 <h1> COMPUTER SCIENCE SOCIETY </h1>
 <h3> Coming Soon </h3>
 </div>
