--- a/index.html
+++ b/index.html
@@ -1,23 +1,47 @@
 <!DOCTYPE html>
 <html>
+
 <head>
-<link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="style.css">
   <link href='https://fonts.googleapis.com/css?family=Russo One' rel='stylesheet'>
   <style>
     body {
-      font-family: 'Russo One', sans-serif; 
+      font-family: 'Russo One', sans-serif;
+    }
+
+    .heading-container {
+      z-index: 1500;
+    }
+
+    #box {
+      border-radius: 50%;
+      height: 50px;
+      width: 50px;
+      filter: blur(10px) opacity(0.25);
+      position: absolute;
+      background-color: orange;
+      z-index: 1000;
+    }
   </style>
+  <script>
+    window.addEventListener('mousemove', (e) => {
+      const element = document.querySelector('#box')
+      const clone = element.cloneNode(true);
+      document.querySelector("body").appendChild(clone);
+      setTimeout(() => clone.remove(), 2_000)
+      element.style.left = `${e.clientX - 25}px`
+      element.style.top = `${e.clientY - 25}px`
+    })
+  </script>
 </head>
+
 <body>
-<div class="heading-container">
-<link href ='https://github.com/fairfield-css/fairfieldcss.github.io/blob/main/fairfield-css-logo-nobg.png'>
-<h1> COMPUTER SCIENCE SOCIETY </h1>
-<h3> Coming Soon </h3>
-</div>
-
-
+  <div id="box"></div>
+  <div class="heading-container">
+    <link href='https://github.com/fairfield-css/fairfieldcss.github.io/blob/main/fairfield-css-logo-nobg.png'>
+    <h1> COMPUTER SCIENCE SOCIETY </h1>
+    <h3> Coming Soon </h3>
+  </div>
 </body>
-</html> 
 
-
-
+</html>
