--- a/index.html
+++ b/index.html
@@ -24,14 +24,16 @@
     }
   </style>
   <script>
-    window.addEventListener('mousemove', (e) => {
+    const moveHandler = (e) => {
       const element = document.querySelector('#box')
       const clone = element.cloneNode(true);
       document.querySelector("body").appendChild(clone);
       setTimeout(() => clone.remove(), 2_000)
       element.style.left = `${e.clientX - 25}px`
       element.style.top = `${e.clientY - 25}px`
-    })
+    }
+    window.addEventListener('mousemove', moveHandler)
+    window.addEventListener('touchmove', moveHandler)
   </script>
 </head>
 
